load("@rules_java//java:defs.bzl", "java_library", "java_test")
load("//legend-pure:grammar.bzl", "antlr_gen")
load("//legend-pure/legend-pure-core/legend-pure-m3-core:pure.bzl", "pure_resource_copy")

antlr_gen(
    name = "antlr_gen",
    srcs = glob(["src/main/antlr4/**/*.g4"]),
    tool = "//legend-pure:antlr4_tool",
    visibility = ["//visibility:private"],
)

pure_resource_copy(
    name = "antlr_resources",
    src = "src/main/antlr4/org/finos/legend/pure/m4/serialization/grammar/core/M4Fragment.g4",
    out = "antlr/M4Fragment.g4",
)

java_library(
    name = "legend-pure-m4",
    srcs = [
        "src/main/java/org/finos/legend/pure/m4/ModelRepository.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/AbstractCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/AbstractCoreInstanceMutableState.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/AbstractCoreInstanceWrapper.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/CoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/CoreInstanceStandardPrinter.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/CoreInstanceStandardValidator.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/CoreInstanceWithStandardPrinting.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/SourceInformation.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/compileState/CompileState.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/compileState/CompileStateSet.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/factory/CoreInstanceFactory.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/factory/MultipassCoreInstanceFactory.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/ComposedIndexSpec.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/CoreInstanceNameIndexSpec.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/IDConflictException.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/IDIndex.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/Index.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/IndexSpecification.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/IndexSpecifications.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/PropertyValueIndexSpec.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/indexing/SourceInfoSourceIdIndexSpec.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/BooleanCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/ByteCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/DateCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/DecimalCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/FloatCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/IntegerCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/PrimitiveCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/StrictTimeCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/StringCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/AbstractDateWithDay.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/AbstractDateWithHour.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/AbstractDateWithMinute.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/AbstractDateWithSecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/AbstractDateWithSubsecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/AbstractPureDate.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateDiff.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateFormat.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateFunctions.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateTime.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateWithHour.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateWithMinute.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateWithSecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/DateWithSubsecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/LatestDate.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/PureDate.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/StrictDate.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/TimeFunctions.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/Year.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/date/YearMonth.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/AbstractSimplePrimitiveCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleBooleanCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleByteCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleDateCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleDecimalCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleFloatCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleIntegerCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimplePrimitiveCoreInstances.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleStrictTimeCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/simple/SimpleStringCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/AbstractPureStrictTime.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/AbstractStrictTimeWithMinute.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/AbstractStrictTimeWithSecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/AbstractStrictTimeWithSubsecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/PureStrictTime.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/StrictTimeFormat.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/StrictTimeFunctions.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/StrictTimeWithMinute.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/StrictTimeWithSecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/StrictTimeWithSubsecond.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/EmptyValues.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/OneValueException.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/SimpleCoreInstance.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/SimpleCoreInstanceFactory.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/SimpleCoreInstanceMutableState.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/SingleValue.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/SmallValues.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/ValueHolder.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/Values.java",
        "src/main/java/org/finos/legend/pure/m4/coreinstance/simple/ValuesWithIndexing.java",
        "src/main/java/org/finos/legend/pure/m4/exception/PureCompilationException.java",
        "src/main/java/org/finos/legend/pure/m4/exception/PureException.java",
        "src/main/java/org/finos/legend/pure/m4/logs/AbstractPureLogger.java",
        "src/main/java/org/finos/legend/pure/m4/logs/PureLogger.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/Reader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/Writer.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/AbstractBinaryReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/AbstractBinaryReaderWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/AbstractBinaryWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/AbstractSimpleBinaryReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/AbstractSimpleBinaryWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/BinaryReaders.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/BinaryRepositorySerializer.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/BinaryWriters.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/ByteBufferBinaryReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/ByteCollectionBinaryWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/ByteListBinaryReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/DelegatingReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/DelegatingWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/IntermediateNode.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/MessageCallBack.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/ReadableByteChannelReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/StreamBinaryReader.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/StreamBinaryWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/UnexpectedEndException.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/VoidMessageCallBack.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/binary/WritableByteChannelWriter.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/M4GraphBuilder.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/M4Parser.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/NameSpace.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/StringEscape.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/antlr/AntlrDescriptiveErrorListener.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/antlr/AntlrSourceInformation.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/antlr/PureAntlrErrorStrategy.java",
        "src/main/java/org/finos/legend/pure/m4/serialization/grammar/antlr/PureParserException.java",
        "src/main/java/org/finos/legend/pure/m4/statelistener/M4StateListener.java",
        "src/main/java/org/finos/legend/pure/m4/statelistener/VoidM4StateListener.java",
        "src/main/java/org/finos/legend/pure/m4/tools/AbstractLazySpliterable.java",
        "src/main/java/org/finos/legend/pure/m4/tools/ConcurrentHashSet.java",
        "src/main/java/org/finos/legend/pure/m4/tools/DefendedFunction.java",
        "src/main/java/org/finos/legend/pure/m4/tools/GraphNodeIterable.java",
        "src/main/java/org/finos/legend/pure/m4/tools/GraphWalkFilterResult.java",
        "src/main/java/org/finos/legend/pure/m4/tools/GraphWalkFilters.java",
        "src/main/java/org/finos/legend/pure/m4/tools/SafeAppendable.java",
        "src/main/java/org/finos/legend/pure/m4/tools/TextTools.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/ModelRepositoryTransaction.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/PrintStreamTransactionObserver.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/TransactionObserver.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/VoidTransactionObserver.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/framework/MultiTransaction.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/framework/MultiTransactionManager.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/framework/ThreadLocalTransactionContext.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/framework/Transaction.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/framework/TransactionManager.java",
        "src/main/java/org/finos/legend/pure/m4/transaction/framework/TransactionStateException.java",
    ] + [":antlr_gen"],
    resources = [":antlr_resources"],
    visibility = ["//visibility:public"],
    exports = [
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_apache_commons_commons_lang3",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
    deps = [
        "@legend_maven//:org_antlr_antlr4_runtime",
        "@legend_maven//:org_apache_commons_commons_lang3",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

filegroup(
    name = "grammar_files",
    srcs = glob(["src/main/antlr4/**/*.g4"]),
    visibility = ["//visibility:public"],
)

java_library(
    name = "test_sources",
    srcs = [
        "src/test/java/org/finos/legend/pure/m4/TestCompileStateSet.java",
        "src/test/java/org/finos/legend/pure/m4/TestCoreM4.java",
        "src/test/java/org/finos/legend/pure/m4/TestModelRepository.java",
        "src/test/java/org/finos/legend/pure/m4/TestModelRepositoryTransaction.java",
        "src/test/java/org/finos/legend/pure/m4/TestPureException.java",
        "src/test/java/org/finos/legend/pure/m4/coreinstance/TestSourceInformation.java",
        "src/test/java/org/finos/legend/pure/m4/coreinstance/primitive/date/TestPureDate.java",
        "src/test/java/org/finos/legend/pure/m4/coreinstance/primitive/strictTime/TestPureStrictTime.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerialization.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_ByteChannelWriterReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_ByteListWriterReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_GZipStreamWriterReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_StreamWriterByteBufferReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_StreamWriterByteChannelReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_StreamWriterByteListReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/TestSerializers_StreamWriterReader.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/AbstractPrimitiveParsingTest.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestBooleanParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestDateParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestDateTimeParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestFloatParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestIntegerParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestStrictDateParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestStrictTimeParsing.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestStringEscape.java",
        "src/test/java/org/finos/legend/pure/m4/serialization/grammar/TestStringParsing.java",
        "src/test/java/org/finos/legend/pure/m4/tools/TestAbstractLazySpliterable.java",
        "src/test/java/org/finos/legend/pure/m4/tools/TestTextTools.java",
        "src/test/java/org/finos/legend/pure/m4/transaction/TestTransaction.java",
    ],
    deps = [
        ":legend-pure-m4",
        "@legend_maven//:junit_junit",
    ],
)

java_test(
    name = "TestCoreM4",
    test_class = "org.finos.legend.pure.m4.TestCoreM4",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestAbstractLazySpliterable",
    test_class = "org.finos.legend.pure.m4.tools.TestAbstractLazySpliterable",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestTextTools",
    test_class = "org.finos.legend.pure.m4.tools.TestTextTools",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSourceInformation",
    test_class = "org.finos.legend.pure.m4.coreinstance.TestSourceInformation",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestPureDate",
    test_class = "org.finos.legend.pure.m4.coreinstance.primitive.date.TestPureDate",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestPureStrictTime",
    test_class = "org.finos.legend.pure.m4.coreinstance.primitive.strictTime.TestPureStrictTime",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestModelRepository",
    test_class = "org.finos.legend.pure.m4.TestModelRepository",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestCompileStateSet",
    test_class = "org.finos.legend.pure.m4.TestCompileStateSet",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestPureException",
    test_class = "org.finos.legend.pure.m4.TestPureException",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestTransaction",
    test_class = "org.finos.legend.pure.m4.transaction.TestTransaction",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestModelRepositoryTransaction",
    test_class = "org.finos.legend.pure.m4.TestModelRepositoryTransaction",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_ByteListWriterReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_ByteListWriterReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_StreamWriterByteListReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_StreamWriterByteListReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestDateTimeParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestDateTimeParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestStrictDateParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestStrictDateParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestIntegerParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestIntegerParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestStringParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestStringParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestDateParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestDateParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestStrictTimeParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestStrictTimeParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestStringEscape",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestStringEscape",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestFloatParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestFloatParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestBooleanParsing",
    test_class = "org.finos.legend.pure.m4.serialization.grammar.TestBooleanParsing",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_StreamWriterByteBufferReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_StreamWriterByteBufferReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_StreamWriterReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_StreamWriterReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_GZipStreamWriterReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_GZipStreamWriterReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_ByteChannelWriterReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_ByteChannelWriterReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerializers_StreamWriterByteChannelReader",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerializers_StreamWriterByteChannelReader",
    runtime_deps = [":test_sources"],
)

java_test(
    name = "TestSerialization",
    test_class = "org.finos.legend.pure.m4.serialization.TestSerialization",
    runtime_deps = [":test_sources"],
)
