load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//tools/build_rules:pure_generation.bzl", "pure_par")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "legend-pure-dsl-path",
    exports = [
        ":pure_platform_dsl_path_par_lib",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-grammar",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-runtime-java-extension-compiled-dsl-path",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-runtime-java-extension-interpreted-dsl-path",
    ],
)

# PAR Generation
java_binary(
    name = "PureJarGenerator",
    main_class = "org.finos.legend.pure.m3.generator.par.PureJarGenerator",
    runtime_deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",  # Contains resources
    ],
)

pure_par(
    name = "pure_platform_dsl_path_par",
    out = "pure-platform_dsl_path.par",
    repo_name = "platform_dsl_path",
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-base",
        "//legend-pure/legend-pure-dsl/legend-pure-dsl-path/legend-pure-m2-dsl-path-pure",
    ],
)

java_library(
    name = "pure_platform_dsl_path_par_lib",
    resource_strip_prefix = "legend-pure/legend-pure-dsl/legend-pure-dsl-path",
    resources = [":pure_platform_dsl_path_par"],
)
