load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "legend-pure-runtime-java-engine-interpreted",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//legend-pure/legend-pure-core/legend-pure-m3-core",
        "//legend-pure/legend-pure-core/legend-pure-m4",
        "//legend-pure/legend-pure-runtime/legend-pure-runtime-java-engine-shared",
        "@legend_maven//:junit_junit",
        "@legend_maven//:org_apache_commons_commons_lang3",
        "@legend_maven//:org_eclipse_collections_eclipse_collections",
        "@legend_maven//:org_eclipse_collections_eclipse_collections_api",
    ],
)

# java_test(
#     name = "tests",
#     srcs = glob(["src/test/java/**/*.java"]),
#     deps = [
#         ":legend-pure-runtime-java-engine-interpreted",
#         "//legend-pure/legend-pure-core/legend-pure-m3-core",
#         "//legend-pure/legend-pure-core/legend-pure-m3-core:m3-core-test-utils",
#         "@legend_maven//:org_eclipse_collections_eclipse_collections_testutils",
#     ],
# )
